syntax = "proto2";

package spotify.player.proto.state_restore;

import "state_restore/provided_track.proto";

message AutomixTalkRules {
  optional ProvidedTrack current_track = 1;
  optional int64 narration_duration = 2;
}

